tests/spec/emit/snapshots/nested_option_pair_match_keeps_outer_catchall_on_tree.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn pick(n: int) -> Option<int> { if n < 0 { None } else { Some(n) } }
  
  fn test() -> string {
    match pick(3) {
      Some(0) => "zero",
      _ => "other",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func pick(n int) (int, bool) {
	if n < 0 {
		return 0, false
	}
	return n, true
}

func test() string {
	option_1 := lisette.OptionFromCommaOk[int](pick(3))
	if option_1.Tag == lisette.OptionSome {
		if option_1.SomeVal == 0 {
			return "zero"
		}
		return "other"
	}
	return "other"
}
