tests/spec/emit/snapshots/nested_option_pair_match_leaves_two_arm_fusion_alone.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn pick(n: int) -> Option<int> { if n < 0 { None } else { Some(n) } }
  
  fn test() -> string {
    match pick(3) {
      Some(_) => "found",
      None => "missing",
    }
  }
---
package main

func pick(n int) (int, bool) {
	if n < 0 {
		return 0, false
	}
	return n, true
}

func test() string {
	if _, ok := pick(3); ok {
		return "found"
	} else {
		return "missing"
	}
}
