tests/spec/emit/snapshots/nested_propagate_in_call_args_binds_the_inner_pair_first.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn double(n: int) -> Result<int, error> { Ok(n * 2) }
  
  fn run() -> Result<int, error> {
    let d = double(strconv.Atoi("1")?)?
    Ok(d)
  }
---
package main

import "strconv"

func double(n int) (int, error) {
	return n * 2, nil
}

func run() (int, error) {
	ret, err := strconv.Atoi("1")
	if err != nil {
		return 0, err
	}
	d, err_1 := double(ret)
	if err_1 != nil {
		return 0, err_1
	}
	return d, nil
}
