tests/spec/emit/snapshots/nested_slice_equals.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Slice<Slice<int>>, b: Slice<Slice<int>>) -> bool {
    a.equals(b)
  }
---
package main

import "slices"

func test(a, b [][]int) bool {
	return slices.EqualFunc(a, b, func(a_1, b_1 []int) bool { return slices.Equal(a_1, b_1) })
}
