tests/spec/emit/snapshots/nested_try_in_if_arm_with_never_tail.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn die() -> Never { panic("dead") }
  
  fn test(flag: bool) -> Result<int, string> {
    if flag {
      try {
        let _ = Ok(1)?;
        die()
      }
    } else {
      Ok(42)
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func die() {
	panic("dead")
}

func test(flag bool) lisette.Result[int, string] {
	if flag {
		check := lisette.MakeResultOk[int, string](1)
		if check.Tag != lisette.ResultOk {
			return check
		}
		die()
	}
	return lisette.MakeResultOk[int, string](42)
}
