tests/spec/emit/snapshots/nested_wrap_err_wraps_inner_message_first.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn parse(raw: string) -> Result<int, error> {
    let n = strconv.Atoi(raw).wrap_err("inner").wrap_err("outer")?
    Ok(n)
  }
  
  fn main() {
    fmt.Println(parse("1"))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func parse(raw string) (int, error) {
	n, err := strconv.Atoi(raw)
	if err != nil {
		return 0, fmt.Errorf("outer: %w", fmt.Errorf("inner: %w", err))
	}
	return n, nil
}

func main() {
	fmt.Println(lisette.ResultFromPair[int](parse("1")))
}
